# bazzite-update-notifier

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  mise.toml
.github/workflows/: ci.yml  release-please.yml
config/: default.toml
docs/: architecture-discussion.md  design-notes.md
docs/plans/: original-impl-plan.md
mise-tasks/: pack
packaging/: bazzite-update-notifier.desktop  bazzite-update-notifier.service  install.sh  uninstall.sh
src/: checker.rs  config.rs  error.rs  icons.rs  lib.rs  main.rs  notifier.rs  resolver.rs  state.rs  tray.rs  urls.rs
tests/: checker_parse.rs  resolver_match.rs
tests/fixtures/: discourse_bazzite_news.json  github_releases_actual.json  github_releases_mixed.json  status_no_pending.json  status_pending_cached.json  status_pending_staged.json
